# sequence-classification

./: .gitignore  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
ci_scripts/travis/: install.sh  test.sh
sequence_classifiers/: __init__.py  cnn.py
tests/: test_cnn.py
