[metadata]
description-file = README.md

[nosetests]
# nosetests skips test files with the executable bit by default
# which can silently hide failing tests.
# There are no executable scripts within the scikit-learn project
# so let's turn the --exe flag on to avoid skipping tests by
# mistake.
exe = 1

ignore-files=^setup\.py$